--- a/contact.html
+++ b/contact.html
@@ -3,113 +3,87 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Contact The Fruitful Branch Family to join our Gospel mission or inquire about our work in West Africa.">
-    <meta name="keywords" content="Contact Christian ministry, The Fruitful Branch Family, Gospel mission Nigeria">
+    <meta name="description" content="Contact The Fruitful Branch Family to join our Gospel mission in West Africa.">
+    <meta name="keywords" content="Contact Christian ministry, The Fruitful Branch Family">
     <meta name="author" content="The Fruitful Branch Family">
     <title>Contact | The Fruitful Branch Family</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Merriweather:ital@1&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Merriweather:wght@400;700&display=swap">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="icon" href="./assets/favicon.ico">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-    <style>
-        :root { --primary: #1B5E20; --secondary: #E8F5E9; --accent: #FFCA28; --neutral: #FFFFFF; --text: #1A1A1A; }
-        body { font-family: 'Inter', sans-serif; margin: 0; }
-        header { background: var(--primary); }
-        .hero { background-size: cover; }
-    </style>
 </head>
-<body class="light-mode">
-    <header class="bg-primary text-white sticky top-0 z-50">
-        <nav class="container mx-auto flex items-center justify-between p-4">
-            <div class="flex items-center">
-                <img src="./assets/images/logo.webp" alt="Fruitful Branch Family Logo" class="h-12 mr-2" loading="lazy">
-                <h1 class="text-2xl font-bold font-inter">The Fruitful Branch Family</h1>
+<body>
+    <header>
+        <nav class="nav container">
+            <div class="nav-logo">
+                <img src="./assets/images/logo.webp" alt="The Fruitful Branch Family Logo" class="logo-img">
+                <span class="nav-title">The Fruitful Branch Family</span>
             </div>
-            <button id="hamburger-toggle" class="md:hidden text-2xl focus:outline-none" aria-label="Toggle Mobile Menu" aria-expanded="false">
+            <button class="hamburger" id="hamburger-toggle" aria-label="Toggle navigation">
                 <i class="fas fa-bars"></i>
             </button>
-            <div class="flex items-center space-x-6">
-                <ul class="hidden md:flex space-x-6 font-inter" id="desktop-menu">
-                    <li><a href="index.html" class="hover:text-accent">Home</a></li>
-                    <li><a href="about.html" class="hover:text-accent">About</a></li>
-                    <li><a href="mission.html" class="hover:text-accent">Mission</a></li>
-                    <li><a href="get-involved.html" class="hover:text-accent">Get Involved</a></li>
-                    <li><a href="media.html" class="hover:text-accent">Media</a></li>
-                    <li><a href="contact.html" class="hover:text-accent" aria-current="page">Contact</a></li>
-                </ul>
-                <button id="dark-mode-toggle" class="text-xl" aria-label="Toggle Dark Mode">
-                    <i class="fas fa-moon"></i>
-                </button>
-            </div>
-        </nav>
-        <div id="mobile-menu" class="hidden md:hidden bg-primary text-white flex flex-col items-center space-y-4 py-4 fixed top-0 right-0 w-3/4 h-full z-40 transition-transform transform translate-x-full glassmorphism">
-            <button id="hamburger-close" class="self-end mr-4 text-2xl" aria-label="Close Mobile Menu">
-                <i class="fas fa-times"></i>
+            <ul class="nav-menu">
+                <li><a href="index.html" class="nav-link">Home</a></li>
+                <li><a href="about.html" class="nav-link">About</a></li>
+                <li><a href="mission.html" class="nav-link">Mission</a></li>
+                <li><a href="get-involved.html" class="nav-link">Get Involved</a></li>
+                <li><a href="media.html" class="nav-link">Media</a></li>
+                <li><a href="contact.html" class="nav-link active" aria-current="page">Contact</a></li>
+            </ul>
+            <button class="dark-mode-toggle" id="dark-mode-toggle" aria-label="Toggle dark mode">
+                <i class="fas fa-moon"></i>
             </button>
-            <a href="index.html" class="text-lg font-inter hover:text-accent menu-item" aria-label="Home">Home</a>
-            <a href="about.html" class="text-lg font-inter hover:text-accent menu-item" aria-label="About">About</a>
-            <a href="mission.html" class="text-lg font-inter hover:text-accent menu-item" aria-label="Mission">Mission</a>
-            <a href="get-involved.html" class="text-lg font-inter hover:text-accent menu-item" aria-label="Get Involved">Get Involved</a>
-            <a href="media.html" class="text-lg font-inter hover:text-accent menu-item" aria-label="Media">Media</a>
-            <a href="contact.html" class="text-lg font-inter hover:text-accent menu-item" aria-label="Contact" aria-current="page">Contact</a>
-        </div>
+        </nav>
     </header>
-
-    <section class="hero bg-cover bg-center h-96 flex items-center text-white animate-fade-in" style="background-image: url('./assets/images/hero-contact.webp');">
-        <div class="container mx-auto text-center px-4">
-            <h2 class="text-4xl font-bold font-inter">Reach Out to Us!</h2>
-            <p class="text-xl font-merriweather mt-4">Let’s connect to bear fruit together.</p>
-        </div>
-    </section>
-
-    <section class="py-16 bg-secondary">
-        <div class="container mx-auto px-4">
-            <h3 class="text-3xl font-bold font-inter text-center mb-8">Get in Touch</h3>
-            <div class="grid md:grid-cols-2 gap-8">
-                <div class="card glassmorphism">
-                    <h4 class="text-xl font-inter font-semibold mb-2">Contact Form</h4>
-                    <form id="contact-form" class="space-y-4" aria-label="Contact Form">
-                        <input type="text" name="name" placeholder="Full Name" class="w-full p-2 rounded border" required>
-                        <input type="email" name="email" placeholder="Email" class="w-full p-2 rounded border" required>
-                        <textarea name="message" placeholder="Your Message" class="w-full p-2 rounded border" required></textarea>
-                        <button type="submit" class="btn btn-primary w-full">Send Message</button>
+    <main>
+        <section class="hero">
+            <img src="./assets/images/hero-contact.webp" alt="Contact Us" class="hero-img">
+            <div class="hero-content container">
+                <h1>Reach Out to Us!</h1>
+                <p>Let’s connect to bear fruit together.</p>
+            </div>
+        </section>
+        <section class="section container">
+            <h2>Get in Touch</h2>
+            <div class="grid">
+                <div class="card">
+                    <h3>Contact Form</h3>
+                    <form id="contact-form">
+                        <label for="contact-name">Name</label>
+                        <input type="text" id="contact-name" required>
+                        <label for="contact-email">Email</label>
+                        <input type="email" id="contact-email" required>
+                        <label for="contact-message">Message</label>
+                        <textarea id="contact-message" required></textarea>
+                        <button type="submit" class="btn btn-primary">Send</button>
                     </form>
                 </div>
-                <div class="card glassmorphism">
-                    <h4 class="text-xl font-inter font-semibold mb-2">Connect Directly</h4>
-                    <p class="font-merriweather mb-2">Email: <a href="mailto:info@fruitfulbranchfamily.org" class="hover:text-accent">info@fruitfulbranchfamily.org</a></p>
-                    <p class="font-merriweather mb-2">Phone: +234-XXX-XXX-XXXX</p>
-                    <p class="font-merriweather mb-4">WhatsApp: <a href="https://wa.me/+234XXXXXXXXXX" target="_blank" class="hover:text-accent">Chat Now</a></p>
-                    <a href="https://wa.me/+234XXXXXXXXXX" target="_blank" class="btn btn-secondary" aria-label="Join WhatsApp">Join WhatsApp</a>
+                <div class="card">
+                    <h3>Connect Directly</h3>
+                    <p>Email: <a href="mailto:info@fruitfulbranchfamily.org">info@fruitfulbranchfamily.org</a></p>
+                    <p>Phone: +234XXXXXXXXXX</p>
+                    <p>WhatsApp: <a href="https://wa.me/+234XXXXXXXXXX">Chat Now</a></p>
+                    <a href="https://wa.me/+234XXXXXXXXXX" class="btn btn-secondary">Join WhatsApp</a>
                 </div>
             </div>
-        </div>
-    </section>
-
-    <section class="py-16 bg-neutral">
-        <div class="container mx-auto px-4 text-center">
-            <h3 class="text-3xl font-bold font-inter mb-6">Visit Us</h3>
-            <p class="text-lg font-merriweather mb-6">Our hub is in Lagos, Nigeria. More locations coming soon!</p>
-            <div class="video-container">
-                <iframe src="https://www.google.com/maps/embed?pb=XXXXXX" title="Lagos Hub Location" loading="lazy" allowfullscreen></iframe>
+        </section>
+        <section class="section section-alt container">
+            <h2>Visit Us</h2>
+            <p>Our hub is in Lagos, Nigeria.</p>
+            <iframe src="https://www.google.com/maps/embed?pb=XXXXXX" title="Lagos Hub Location" frameborder="0" allowfullscreen></iframe>
+        </section>
+    </main>
+    <footer>
+        <div class="container">
+            <p>&copy; 2025 The Fruitful Branch Family. All rights reserved.</p>
+            <div class="footer-links">
+                <a href="https://wa.me/+234XXXXXXXXXX" target="_blank" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+                <a href="https://tiktok.com/@fruitfulbranch" target="_blank" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
+                <a href="https://youtube.com/@fruitfulbranch" target="_blank" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
             </div>
-        </div>
-    </section>
-
-    <footer class="bg-primary text-white py-8 relative overflow-hidden">
-        <div class="absolute inset-0 opacity-10 bg-[url('./assets/images/kente-pattern.webp')] bg-repeat"></div>
-        <div class="container mx-auto px-4 text-center relative z-10">
-            <p class="font-merriweather mb-4">© 2025 The Fruitful Branch Family. All Rights Reserved.</p>
-            <div class="flex justify-center space-x-6 mb-4">
-                <a href="https://wa.me/+2349020229248" target="_blank" aria-label="WhatsApp"><i class="fab fa-whatsapp text-2xl hover:text-accent"></i></a>
-                <a href="https://tiktok.com/@fruitfulbranch" target="_blank" aria-label="TikTok"><i class="fab fa-tiktok text-2xl hover:text-accent"></i></a>
-                <a href="https://youtube.com/@fruitfulbranch" target="_blank" aria-label="YouTube"><i class="fab fa-youtube text-2xl hover:text-accent"></i></a>
-            </div>
-            <p class="font-inter">Contact: <a href="mailto:info@fruitfulbranchfamily.org" class="hover:text-accent">info@fruitfulbranchfamily.org</a> | +234-XXX-XXX-XXXX</p>
+            <p>Contact: <a href="mailto:info@fruitfulbranchfamily.org">info@fruitfulbranchfamily.org</a> | +234XXXXXXXXXX</p>
         </div>
     </footer>
-
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="./js/scripts.js"></script>
 </body>
